Tweak media queries for front page to avoid overlap

--- a/articles/static/2012/front.css
+++ b/articles/static/2012/front.css
@@ -5,16 +5,6 @@ header {
     text-shadow: #FFF 1px 1px 2px ;
 }
 
-/* Version that works with font-face
-h1 {
-    margin: 0;
-    font-family: "SpadeRound", sans-serif;
-    font-weight: normal;
-    font-style: normal;
-    text-transform: uppercase;
-}
-*/
-
 h1 {
     display: block;
     margin: 0;
@@ -24,7 +14,7 @@ h1 {
     background: transparent url(wordmark-300x67.png) left top no-repeat;
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 1120px) {
     h1 {
         display: block;
         margin: 0;
@@ -85,14 +75,9 @@ h1 i {
 
 article {
     width: 100%;
-    -webkit-column-count: 2;
-    -webkit-column-gap: 0;
-    column-count: 2;
-    column-gap: 0;
 }
 
 .has-embedded-media article {
-    -webkit-column-count: 1;
 }
 
  .embedded-media {
@@ -221,7 +206,7 @@ section dd a:active u {
 }
 
 /* Smaller than default scrteens get smaller logo */
-@media screen and (max-width: 940px) {
+@media screen and (max-width: 980px) {
     #article  {
         width: 480px;
     }
